# POC_complex_project_structure

./: .gitignore  CMakeLists.txt  README.md  build_macros.cmake
app/: CMakeLists.txt  main.cpp
app/gui/: main.qml
libs/: CMakeLists.txt
libs/graphics/: graphics.pro
libs/graphics/gui/: UiButton.qml  UiLabel.qml  qml.qrc  qmldir
libs/graphics/include/: graphics.h  graphics_global.h
libs/graphics/source/: graphics.cpp
